# python-ai-autocommit

./: .gitignore  README.md  auto_commit.py  new_auto_commit.py  pyproject.toml
ai_auto_committer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
